deploy: 3c46eb41b19b2e8313c20fa8f2c67d8bdb774a13

--- a/about.html
+++ b/about.html
@@ -79,7 +79,70 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
 
-        <p>Under Construction…</p>
+        <h2 id="フォーラム運営">フォーラム運営</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>氏名</th>
+      <th>参加時期</th>
+      <th>主な所属学会</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>桑原　恵介</td>
+      <td>2021~</td>
+      <td>日本疫学会</td>
+    </tr>
+    <tr>
+      <td>原田　浩二</td>
+      <td>2021~</td>
+      <td>日本衛生学会</td>
+    </tr>
+    <tr>
+      <td>山本　琢磨</td>
+      <td>2021~</td>
+      <td>日本法医学会</td>
+    </tr>
+    <tr>
+      <td>原　広司</td>
+      <td>2021~</td>
+      <td>日本医療・病院管理学会</td>
+    </tr>
+    <tr>
+      <td>中部　貴央</td>
+      <td>2022/02/01~</td>
+      <td>日本医療・病院管理学会</td>
+    </tr>
+    <tr>
+      <td>小林　果</td>
+      <td>2022/02/01~</td>
+      <td>日本衛生学会</td>
+    </tr>
+    <tr>
+      <td>下敷領　一平</td>
+      <td>2022/02/01~</td>
+      <td>日本農村医学会</td>
+    </tr>
+    <tr>
+      <td>和田　聖哉</td>
+      <td>2022/02/01~</td>
+      <td>日本医療情報学会</td>
+    </tr>
+    <tr>
+      <td>永吉　真子</td>
+      <td>2024/05/16~</td>
+      <td>日本疫学会</td>
+    </tr>
+    <tr>
+      <td>天笠　志保</td>
+      <td>2024/09/12~</td>
+      <td>公衆衛生学会、日本疫学会、日本体力医学会</td>
+    </tr>
+  </tbody>
+</table>
+
 
 
       </div>
