--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,6 @@
           <div class="page-heading">
             <h1>Contact</h1>
             
-            <span class="subheading">（準備中）</span>
-            
           </div>
         </div>
       </div>
@@ -79,7 +77,18 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
 
-        <p>Under Construction…</p>
+        <p>お問い合わせは以下のメールアドレスまでお願いいたします：</p>
+
+<p><span id="email"></span></p>
+
+<script>
+  document.getElementById('email').innerHTML = 
+    '<a href="mailto:' + 
+    'shakai' + '.' + 
+    'wakate' + 
+    '@gmail.com">shakai.wakate@gmail.com</a>';
+</script>
+
 
 
       </div>
